# supermoan

./: CMakeLists.txt  Info.plist.in  LICENSE  README.md
.github/workflows/: release.yml
src/: main.cc  main.cpp  recorder.cc  recorder.cpp  recorder.hh  transcriber.cc  transcriber.hpp  transcriber.mm  typist.cc  typist.cpp  typist.hh  util.cc  util.cpp  util.hh
